--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h2>I am very happy</h2>
-    <h3>It is my gi</h3>
+    <h3>It is my git</h3>
+    <p>I love my country.</p>
 </body>
 </html>t
