--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h3>It is my git</h3>
     <p>I love my country.</p>
     <h5>I agree with you</h5>
+    <img src="flag.jpg" alt="">
 </body>
 </html>
