--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h5>I agree with you</h5>
     <img src="flag.jpg" alt="">
     <p>talking from the 2nd branch</p>
-    <p>I addcmore things</p>
-</body>
+    <p>I add more things</p>
+    <p>my name is mim</p>
 </html>
